# Meta-Hackathon

./: .gitattributes  .gitignore  README.md  _smoke_err.txt  _smoke_out.txt  contracts.py  environment.py  requirements.txt
agents/: __init__.py  it_agent.py  it_tactical_agent.py
agents/policies/: __init__.py
checkpoints/step_00050/: checkpoint_meta.json
enterprise_ops/: BLOG.md  README.md  __init__.py  client.py  contracts.py  episodes.db  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_crash.py  test_integration.py  test_reward.py  test_reward2.py  test_reward3.py  test_scenario08.py
enterprise_ops/agents/: __init__.py  base_agent.py  finance_agent.py  it_agent.py  it_strategic_agent.py  it_tactical_agent.py  manager_agent.py  oversight_agent.py  project_agent.py  trained_agent.py  utils.py
enterprise_ops/agents/policies/: ml_policy.py  rule_policy.py
enterprise_ops/env/: __init__.py  env.py  schema_drift.py  tools.py  world_model.py
enterprise_ops/env/scenarios/: scenario_01.yaml  scenario_02.yaml  scenario_03.yaml  scenario_04.yaml  scenario_05.yaml  scenario_06.yaml  scenario_07.yaml  scenario_08.yaml  scenario_loader.py
enterprise_ops/scratch/: check_reward.py  smoke_trained.py
enterprise_ops/server/: Dockerfile  __init__.py  app.py  environment.py  episodes.db-shm  episodes.db-wal  gradio_app.py  requirements.txt
enterprise_ops/train/: .gitkeep  __init__.py  colab_notebook.ipynb  config.py  episode_buffer.py  main.py  reward_fn.py  reward_fn_backup.py  trainer.py
logs/: episode_log.json  metrics.csv
(+3 files in other folders)
